Keep event handling to JS

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="todo" class="header">
       <h2>A Humble To-Do List Project</h2>
       <input id="input" placeholder="Type your new task here!" />
-      <span onclick="updateList()" class="button">Add</span>
+      <span id="addButton" class="button">Add</span>
     </div>
     <div id="list" class="lists"></div>
     <script src="humble-todolist.js"></script>
